# hrolog

./: README.md  hrolog.cabal
app/: Main.hs
src/: Interpreter.hs  Lib.hs  Parser.hs  Syntax.hs
