name:                hrolog
version:             0.1.0.0
synopsis:            A simple prolog implementation
description:         A simple prolog implementation
homepage:            https://github.com/alehander42/hrolog#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Ivanov
maintainer:          alehander42@gmail.com
copyright:           2016 Alexander Ivanov
category:            Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1.0 && < 3.2
  default-language:    Haskell2010

executable hrolog-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hrolog
  default-language:    Haskell2010

test-suite hrolog-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hrolog
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hrolog
